# inferrvc

./: pyproject.toml
inferrvc/configs/: config.py
