[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inferrvc"
version = "1.2"
authors = [{name = "Charles Marks", email = "charlesmarksco@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.7"  # Python 3.7+ is recommended for compatibility with Torch and other libraries
dynamic = ["description"]

dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "torch",
    "torchaudio",
    "librosa",
    "pyworld",
    "praat-parselmouth",
    "torchcrepe",
    "huggingface-hub",
    "fairseq",
    "faiss-cpu",
    "yt-dlp",
    "audio-separator[gpu]"
]

[project.urls]
Home = "https://github.com/CircuitCM/RVC-inference"

[tool.flit.module]
name = "inferrvc"
